<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoReboot</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mode1_title">Strategy:</string>
    <string name="reboot_item_title">Reboot</string>
    <string name="update_item_title">Update</string>
    <string name="ping_item_title">Ping</string>
    <string name="loop">Loop</string>
    <string name="delay_time">set delay time(seconds)\n def:30s</string>
    <string name="start">Start</string>
    <string name="single">Single</string>
    <string name="reboot">Reboot&#160;</string>
    <string name="update">Update&#160;</string>
    <string name="ping">Ping&#160;</string>
    <string name="select_update_file">Select Update File</string>
    <string name="selected">Select</string>
    <string name="update_file_pos">Update File Path</string>
    <string name="ping_times">Try Times Ping before Failed\n def:30times</string>
    <string name="ping_ips">Ping Address\n def:www.baidu.com</string>
    <string name="test_plan">Test Plan Here:</string>
    <string name="start_plan">Start Test</string>
      <string name="stop_plan">Stop Test</string>
    <string name="times_after">Reboot Times\n def:3times</string>
        <string name="scan_title">Scanning</string>
    <string name="scan_tip">Scanning,Please wait...</string>
    <string name="reboot_times">Reboot Times:</string>
     <string name="update_times">Update Times:</string>
     <string name="current_mode">Current Mode:</string>
     <string name="current_items">Current Test Items:</string>
     <string name="ping_IP">Ping IP:</string>
    <string name="running">Test is Running:</string>
    <string name="stoping">Test is Stopped.\n</string>
    <string name="start_time">Test started at:</string>
    <string name="ping_ip">Current Ip:</string>
    <string name="stop_time">Stop at:</string>
    <string name="ping_failed">Ping Failed\n</string>
    <string name="version_info" translatable="false">201708171100</string>
    <string name="version">Version Info:</string>
</resources>