<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    tools:context="com.droidlogic.autoreboot.AutoRebootActivity" >

    <RadioGroup
        android:id="@+id/radioGroupID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/checkSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single" />

        <RadioButton
            android:id="@+id/checkLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:text="@string/loop" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/radioGroupID"
        android:layout_alignLeft="@+id/radioGroupID"
        android:divider="@drawable/table_v_divider"
        android:orientation="vertical"
        android:showDividers="middle|beginning|end" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@drawable/table_h_divider"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_span="2"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/reboot_item_title" >
            </TextView>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/delay_time"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceSmall" >
            </EditText>

            <EditText
                android:id="@+id/edit_times"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/times_after"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceSmall" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@drawable/table_h_divider"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end" >

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_span="2"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/update_item_title" >
            </TextView>

            <TextView
                android:id="@+id/file_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center"
                android:hint="@string/update_file_pos" >
            </TextView>

            <Button
                android:id="@+id/select_updateFile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/select_update_file" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:divider="@drawable/table_h_divider"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end" >

            <CheckBox
                android:id="@+id/check_box3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_span="2"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ping_item_title" >
            </TextView>

            <EditText
                android:id="@+id/editText3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/ping_times"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceSmall" >
            </EditText>

            <EditText
                android:id="@+id/editText4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:hint="@string/ping_ips"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceSmall" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:divider="@drawable/table_h_divider"
            android:orientation="horizontal"
            android:showDividers="middle|beginning|end" >

            <Button
                android:id="@+id/start_plan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/start_plan" />

            <ScrollView
    	          android:layout_width="0dp"
    		   android:layout_height="match_parent"
    		   android:layout_weight="3"
    		   android:scrollbars="vertical"
    		   android:fillViewport="true" >
                <TextView
                    android:id="@+id/test_result"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:background="@color/result" >
		   </TextView>
	      </ScrollView>

            <Button
                android:id="@+id/stop_plan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/stop_plan" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/version_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/version_info"
        android:textColor="@color/green" />

</RelativeLayout>
